mv frontend into main dockerfile
